OR-1647 Fix FAB to overlap the calendar

--- a/frontend/css/styles.less
+++ b/frontend/css/styles.less
@@ -135,3 +135,7 @@ header.topbar {
 #profile-main .pmop-edit {
   cursor: pointer;
 }
+
+.m-btn {
+  z-index: 2;
+}
